md-picture/.correct/correct_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exingress
  namespace: exoingress
spec:
  ingressClassName: classexercice
  tls:
  - hosts:
    - toto.fr
    secretName: tototls
  rules:
  - host: toto.fr
    http:
      paths:
      - path: /monappA
        pathType: Exact
        backend:
          service:
            name: svctoexpose-a
            port:
              number: 8088
      - path: /monAppB
        pathType: Prefix
        backend:
          service:
            name: svctoexpose-b
            port:
              number: 80
